# resolute-bottle

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  run_production_server.sh
backend/movies/: search.py  settings.py  urls.py
backend/movies/management/commands/: load_dataset.py
backend/movies/migrations/: 0001_initial.py  0002_add_imdb_and_tmdb_id_fields.py
backend/movies/models/: __init__.py  _base.py  genre.py  movie.py  rating.py  tag.py  user.py
backend/movies/views/: __init__.py  movie.py
backend/tests/movies/views/: test_movie.py
frontend/: boot-dev.sh  package.json
frontend/src/: App.js  App.tsx  api.ts  types.d.ts
frontend/src/components/: Movie.tsx  MovieList.tsx
proxy/conf.d/: resolute-bottle.conf
